adicionando validações por regex no cadastro e edição do perfil